package NAntiRobot.NAntirobotCookieProto;

message TAntirobotCookie {
    optional bytes LastVisits = 1;
}
